2008-01-14  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/krb5-security.m4: abort configure run if krb5
	  is requested by libraries aren't found

2008-01-13  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: use &#215; instead of &times;

2008-01-11  Paddy Sreenivasan <paddy@zmanda.com>
	* device-src/Makefile.am: Don't install queueing.h and device.h

2008-01-11  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Config.swg perl/Amanda/Debug.swg: complete documentation

2008-01-11  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/Makefile.am: Install amandad in $libexecdir/amanda
	* installcheck/amgetconf.pl: usetimestamps defaults to yes.
	* NEWS, ReleaseNotes: Notes about make installcheck.

2008-01-11  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Add amcryptsimple, amgpgcrypt, amserverconfig and amaddclient.
	* ReleaseNotes: Ditto.

2008-01-11  Jean-Louis Martineau <martineau@zmanda.com>
	* ReleaseNotes: Update for amanda-2.6.0
	* News: Update for amanda-2.6.0
	* configure.in: AM_INIT_AUTOMAKE(amanda, "2.6.0b1")
	* Makefile.am (pkgdata_DATA): Add NEWS, ChangeLog and amanda.spec
	* amanda.spec: %{!?amanda_version: %define amanda_version 2.6.0b1}

2008-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (usetimestamps): Default ot yes.
	* man/xml-source/amanda.conf.5.xml (usetimestamps): Document it.

2008-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amverifyrun.sh, server-src/amverify.sh,
	  tape-src/ammt.c, tape-src/amdd.c: Write deprecated message.

2008-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/defaults.m4: Set amandates to $localstatedir/amanda/amandate

2008-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfreetapes.sh: Use amlibexecdir.

2008-01-10  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dirs.m4: Set amlibexecdir to $libexecdir/amanda.
	* amandad-src/amandad.c, amplot/amplot.sh,